manifest/objects/Apttus_Approval__ApprovalJob__c.object
<CustomObject>
    <description>Holds information about approval jobs for bulk submit, recall, approve and reject actions</description>
    <fields>
        <fullName>Apttus_Approval__ApexChildJobId__c</fullName>
        <description>The id of the chained async apex job associated with the parent job for this approval request action</description>
        <inlineHelpText>The id of the chained async apex job associated with the parent job for this approval request action</inlineHelpText>
        <label>Apex Child Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApexParentJobId__c</fullName>
        <description>The id of the parent async apex job associated with this approval request action</description>
        <inlineHelpText>The id of the parent async apex job associated with this approval request action</inlineHelpText>
        <label>Apex Parent Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__ApprovalRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The approval request id for which this async queueable job applies</description>
        <inlineHelpText>The approval request id for which this async queueable job applies</inlineHelpText>
        <label>Approval Request Id</label>
        <referenceTo>Apttus_Approval__Approval_Request__c</referenceTo>
        <relationshipLabel>Approval Jobs</relationshipLabel>
        <relationshipName>Approval_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Status__c</fullName>
        <description>Status of the apex queueable job</description>
        <inlineHelpText>Status of the apex queueable job</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Preparing</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approval Job</label>
    <listViews>
        <fullName>Apttus_Approval__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Approval__ApprovalRequestId__c</columns>
        <columns>Apttus_Approval__ApexParentJobId__c</columns>
        <columns>Apttus_Approval__ApexChildJobId__c</columns>
        <columns>Apttus_Approval__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contract_Ops_ApprovalJob</fullName>
        <filterScope>Queue</filterScope>
        <label>Contract Ops</label>
        <queue>Contract_Ops</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AJ-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>